1999-08-18  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ansi2knr.c: New release (fix for bug reported by Marc Brett)
	From: "L. Peter Deutsch" <ghost@aladdin.com>

	* include/ntp_stdlib.h: NeXT portability patch
	From: Jack Bryans <jbryans@csulb.edu>

	* configure.in:
	* dot.emacs: (cleanup)
	* ntpdate/Makefile.am:
	* ntpdate/ntpdate.h:
	* ntpdate/ntptime_config.c:
	* ntpdate/ntptimeset.c:
	ntptimeset patches.
	From: Jeffrey Hutzelman <jhutz@cmu.edu>
	
	* ntpd/refclock_parse.c (local_input): ts.l_ui -> ts.fp.l_ui

1999-08-11  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.96p1

	* ntpd/ntpd.c (sys/resource.h): Include this file only #if
 	HAVE_SYS_RESOURCE_H.
	(set_process_priority): Use TIOCNOTTY only if it is #define'd.
	* ntpd/refclock_parse.c (STREAM): STREAM does not imply HAVE_TERMIOS.
	(termios.h, termio.h, fcntl.h): Do not include those files here;
	they are already included by ntp_refclock.h or ntp_io.h.
	* ntpd/refclock_leitch.c (sgtty.h, termios.h, termio.h): Do not
	include those files here; they are already included by ntp_refclock.h.
	* ntpdate/ntpdate.c (sys/resource.h) : Include that file only #if
	HAVE_RESOURCE_H.
	From: Philippe De Muyter <phdm@macqel.be>
	
	* ntptrace/ntptrace.c (input_handler): Make it a "normal" function 
	definition.
	Reported by: GIANNI_CATANIA@hp-italy-om6.om.hp.com

	* configure.in:  pc-cygwin32 -> pc-cygwin* because of a change in
	B20.
	From: Stephen Gildea <gildea@intouchsys.com>

1999-08-09  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.96

	* parseutil/dcfd.c (main): Replace SA_ONSTACK and SV_ONSTACK with
	HAVE_SIGACTION and HAVE_SIGVEC, respectively.  HP-UX provides both 
	of the former but only one of the latter...

1999-08-08  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: Better tests for -lnsl and -lsocket
	From: Albert Chin-A-Young <china@thewrittenword.com>

	Works for me - handle openlog() and -lgen the same way.

	* Makefile.am (EXTRA_DIST): Add in the y2k notes
